# lendingclub_ds

./: .gitignore  LICENSE  get_data.sh  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: data_prep-dev.ipynb
src/data/: prep_data.py
src/visualization/: EDA.py
