[tool.poetry]
name = "lendingclub-ds"
version = "0.1.0"
description = "Analysis of LendinClub data available on Kaggle at https://www.kaggle.com/datasets/ethon0426/lending-club-20072020q1"
authors = ["Sandeep <sandeep.kavadi.uc@gmail.com>"]
readme = "README.md"
packages = [{include = "lendingclub_ds"}]

[tool.poetry.dependencies]
python = "^3.8"
llvmlite = "^0.39.1"
numba = "^0.56.4"
mlflow = "^2.1.1"
hydra-core = "^1.3.1"
pyspark = "^3.3.1"
openpyxl = "^3.0.10"
plotly = "^5.12.0"
kaleido = "0.1.0"


[tool.poetry.group.dev.dependencies]
kaggle = "^1.5.12"
polars = "^0.15.14"
jupyter = "^1.0.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
